// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should render the input 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.4rem;
  margin-bottom: 1.2rem;
}

.c1 {
  border: none;
  background-color: #0000;
  color: #999392;
  font-size: 1.4rem;
  font-weight: 400;
  font-style: italic;
  padding-bottom: 0.8rem;
  padding-right: 0;
  border-bottom: 0.2rem solid #DAD2D0;
  -webkit-transition: border-color 0.3s ease-out;
  transition: border-color 0.3s ease-out;
  -moz-appearance: textfield;
}

.c1:-internal-autofill-previewed {
  background-color: #0000 !important;
}

.c1:-internal-autofill-selected {
  background-color: #0000 !important;
}

.c1::-webkit-inner-spin-button {
  display: none;
}

.c1:invalid {
  outline: none;
  box-shadow: none;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1:required {
  box-shadow: none;
}

.c1::-webkit-input-placeholder {
  color: #999392;
}

.c1::-moz-placeholder {
  color: #999392;
}

.c1:-ms-input-placeholder {
  color: #999392;
}

.c1::placeholder {
  color: #999392;
}

.c1:disabled {
  cursor: not-allowed;
  border-bottom: 0.1rem solid #F4F2F1;
}

.c1:disabled::-webkit-input-placeholder {
  color: #F4F2F1;
}

.c1:disabled::-moz-placeholder {
  color: #F4F2F1;
}

.c1:disabled:-ms-input-placeholder {
  color: #F4F2F1;
}

.c1:disabled::placeholder {
  color: #F4F2F1;
}

.c1:focus {
  caret-color: #DAD2D0;
  border-bottom: 0.2rem solid #DAD2D0;
}

.c1:focus-visible {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1"
    type="text"
    value=""
  />
</div>
`;

exports[`<TextField /> should render the input password 1`] = `
.c3 {
  height: 13.33px;
  width: 13.33px;
  height: 13.33px;
  width: 13.33px;
  stroke: #999392;
  fill: #999392;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.4rem;
  margin-bottom: 1.2rem;
}

.c1 {
  border: none;
  background-color: #0000;
  color: #999392;
  font-size: 1.4rem;
  font-weight: 400;
  font-style: italic;
  padding-bottom: 0.8rem;
  padding-right: 1.2rem;
  border-bottom: 0.2rem solid #DAD2D0;
  -webkit-transition: border-color 0.3s ease-out;
  transition: border-color 0.3s ease-out;
  -moz-appearance: textfield;
}

.c1:-internal-autofill-previewed {
  background-color: #0000 !important;
}

.c1:-internal-autofill-selected {
  background-color: #0000 !important;
}

.c1::-webkit-inner-spin-button {
  display: none;
}

.c1:invalid {
  outline: none;
  box-shadow: none;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1:required {
  box-shadow: none;
}

.c1::-webkit-input-placeholder {
  color: #999392;
}

.c1::-moz-placeholder {
  color: #999392;
}

.c1:-ms-input-placeholder {
  color: #999392;
}

.c1::placeholder {
  color: #999392;
}

.c1:disabled {
  cursor: not-allowed;
  border-bottom: 0.1rem solid #F4F2F1;
}

.c1:disabled::-webkit-input-placeholder {
  color: #F4F2F1;
}

.c1:disabled::-moz-placeholder {
  color: #F4F2F1;
}

.c1:disabled:-ms-input-placeholder {
  color: #F4F2F1;
}

.c1:disabled::placeholder {
  color: #F4F2F1;
}

.c1:focus {
  caret-color: #DAD2D0;
  border-bottom: 0.2rem solid #DAD2D0;
}

.c1:focus-visible {
  outline: none;
}

.c2 {
  cursor: pointer;
  border: none;
  background-color: transparent;
  position: absolute;
  bottom: 1.6rem;
  right: 0;
}

<div
  class="c0"
>
  <input
    class="c1"
    type="password"
    value=""
  />
  <button
    class="c2"
    type="button"
  >
    <svg
      class="c3"
      color="gray-medium"
      size="13.33"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.28489 9.23667C9.11844 9.4086 8.91771 9.54651 8.69468 9.64216C8.47165 9.7378 8.23089 9.78923 7.98676 9.79338C7.74263 9.79753 7.50014 9.7543 7.27374 9.66629C7.04735 9.57827 6.84169 9.44727 6.66904 9.28109C6.49639 9.11491 6.36028 8.91697 6.26883 8.69906C6.17739 8.48116 6.13248 8.24776 6.13679 8.01278C6.1411 7.77781 6.19453 7.54608 6.29391 7.33141C6.39328 7.11675 6.53656 6.92355 6.71519 6.76334M11.6 11.465C10.564 12.2251 9.30253 12.6462 8.00004 12.6667C3.75762 12.6667 1.33337 8 1.33337 8C2.08725 6.64778 3.13285 5.46636 4.40004 4.53501L11.6 11.465ZM6.72731 3.47334C7.14448 3.37936 7.57159 3.33237 8.00004 3.33334C12.2425 3.33334 14.6667 8 14.6667 8C14.2988 8.66244 13.8601 9.2861 13.3576 9.86083L6.72731 3.47334Z"
        fill="none"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
      <path
        d="M1.33337 1.33333L14.6667 14.6667"
        fill="none"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`<TextField /> should render with label 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.4rem;
  margin-bottom: 1.2rem;
}

.c2 {
  border: none;
  background-color: #0000;
  color: #999392;
  font-size: 1.4rem;
  font-weight: 400;
  font-style: italic;
  padding-bottom: 0.8rem;
  padding-right: 0;
  border-bottom: 0.2rem solid #DAD2D0;
  -webkit-transition: border-color 0.3s ease-out;
  transition: border-color 0.3s ease-out;
  -moz-appearance: textfield;
}

.c2:-internal-autofill-previewed {
  background-color: #0000 !important;
}

.c2:-internal-autofill-selected {
  background-color: #0000 !important;
}

.c2::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  outline: none;
  box-shadow: none;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2:required {
  box-shadow: none;
}

.c2::-webkit-input-placeholder {
  color: #999392;
}

.c2::-moz-placeholder {
  color: #999392;
}

.c2:-ms-input-placeholder {
  color: #999392;
}

.c2::placeholder {
  color: #999392;
}

.c2:disabled {
  cursor: not-allowed;
  border-bottom: 0.1rem solid #F4F2F1;
}

.c2:disabled::-webkit-input-placeholder {
  color: #F4F2F1;
}

.c2:disabled::-moz-placeholder {
  color: #F4F2F1;
}

.c2:disabled:-ms-input-placeholder {
  color: #F4F2F1;
}

.c2:disabled::placeholder {
  color: #F4F2F1;
}

.c2:focus {
  caret-color: #DAD2D0;
  border-bottom: 0.2rem solid #DAD2D0;
}

.c2:focus-visible {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.8rem;
  color: #575453;
  font-size: 1.4rem;
  line-height: 2rem;
  font-weight: 400;
}

<div
  class="c0"
>
  <label
    class="c1"
  >
    nome
  </label>
  <input
    class="c2"
    type="text"
    value=""
  />
</div>
`;
